--- a/baitap1/index.html
+++ b/baitap1/index.html
@@ -9,9 +9,9 @@
 <body>
     <form action="">
         <label for="">Nhập số a: </label><br>
-        <input type="text" id="a" value=""/><br>
+        <input type="number" id="a" value=""/><br>
         <label for="">Nhập số b: </label><br>
-        <input type="text" id="b" value=""/><br><br>
+        <input type="number" id="b" value=""/><br><br>
         <button type="button" id="timnghiem">Giải nghiệm</button>
     </form>
 
