--- a/baitap2/index.html
+++ b/baitap2/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <form action="">
-        <input type="text" id="a" name="a" placeholder="nhap gia tri bien a">
-        <input type="text" id="b" name="b" placeholder="nhap gia tri bien b">
-        <input type="text" id="c" name="c" placeholder="nhap gia tri bien c">        
+        <input type="number" id="a" name="a" value="" placeholder="nhap gia tri bien a">
+        <input type="number" id="b" name="b" value="" placeholder="nhap gia tri bien b">
+        <input type="number" id="c" name="c" value="" placeholder="nhap gia tri bien c">        
         <button type="button" id="btn">Tim nghiem</button>
     </form>
     <script src="/baitap2/main.js"></script>
