--- a/baitap1/index.html
+++ b/baitap1/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giai bai tap</title>
 </head>
-<body>
-    <form action="">
-        <label for="">Nhập số a: </label><br>
-        <input type="text" id="a" value=""/><br>
-        <label for="">Nhập số b: </label><br>
-        <input type="text" id="b" value=""/><br><br>
-        <button type="button" id="timnghiem">Giải nghiệm</button>
-    </form>
+<b <form action="">
+    <label for="">Nhập số a: </label><br>
+    <input type="number" id="a" value=""/><br>
+    <label for="">Nhập số b: </label><br>
+    <input type="number" id="b" value=""/><br><br>
+    <button type="button" id="timnghiem">Giải nghiệm</button>
+</form>
+
 
     <script src="/baitap1/index.js"></script>
 </body>
