[ADDED] add feedback

--- a/baitap2/index.html
+++ b/baitap2/index.html
@@ -10,9 +10,9 @@
     <form action="">
         <input type="number" id="a" name="a" value="" placeholder="nhap gia tri bien a">
         <input type="number" id="b" name="b" value="" placeholder="nhap gia tri bien b">
-        <input type="number" id="c" name="c" value="" placeholder="nhap gia tri bien c">        
+        <input type="number" id="c" name="c" value="" placeholder="nhap gia tri bien c">
         <button type="button" id="btn">Tim nghiem</button>
     </form>
-    <script src="/baitap2/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
